# esos

./: .gitignore  01_About_ESOS.md  02_Screenshots.md  03_Supported_Hardware.md  04_ESOS_Support.md  05_Legacy_CLI_Examples.md  06_ESOS_Development.md  07_Articles.md  08_Project_Roadmap.md  11_Building.md  12_Installation.md  13_Upgrading.md  21_Initial_System_Configuration.md  22_Advanced_System_Configuration.md  23_System_and_Performance_Monitoring.md  31_Basic_Back_End_Storage_Setup.md  32_Advanced_Back_End_Storage_Setup.md  41_Hosts_and_Initiators.md  51_Device_Configuration.md  61_Target_Configuration.md  AUTHORS  CHECKSUM.MD5  CHECKSUM.SHA256  CNAME  COMMERCIAL_EULA  COMM_LICENSE  COPYING  ChangeLog  INSTALL  Makefile  Makefile.in  PROF_LICENSE  README  README.md  THANKS  TODO  configure.ac  esos2iso.sh  goto-chroot  index.html  (+8 more)
contrib/: check_zpools.sh  list-pcie-ports.sh  lvmconf  tc_wrap.py
etc/: bashrc  blkid.conf  bttab  crontab  drbd.conf  fstab  group  hba.conf  hosts  inittab  issue  ld.so.conf  lessfs.cfg  mdadm.conf  mdev.conf  minirc.dfl  modprobe.conf  network  network.conf  nrpe.cfg  nsswitch.conf  passwd  perf-agent.conf  profile  protocols  rc.conf  rc.local  send_nsca.cfg  services  shadow  smartd.conf  ssmtp.conf  sysctl.conf  syslog.conf  upsd.conf  upsmon.conf  upssched.conf
isolinux/: boot.cat  isolinux.cfg  menu.c32
misc/: Python-2.7.12.patch  Python-2.7.3.patch  bcache-tools-1.0.8.patch  btier-1.3.11.patch  busybox-1.19.0.config  busybox-1.19.0.patch  busybox-1.20.2.config  busybox-1.25.1.config  busybox-1.26.2.config  busybox-1.30.1.config  cdk-5.0-20120323.patch  cdk-5.0-20161210.patch  cdk-5.0-20190303.patch  dlm-4.0.8.patch  drbd-8.3.11.patch  drbd-utils-9.8.0.patch  eudev-3.2.1.patch  fence-agents-4.0.24.patch  gcc-4.7.4.patch  glibc-2.12.2.patch  glibc.SUPPORTED.locales  grub.cfg  grub.conf  ibutils-1.5.7.patch  initramfs_init  irqbalance-1.2.0.patch  irqbalance-1.8.0.patch  lessfs-1.7.0.patch  libvirt-6.10.0.patch  linux-3.10.13.config  linux-3.12.20.config  linux-3.12.7.config  linux-3.14.16.config  linux-3.14.19.config  linux-3.14.19.patch  linux-3.14.36-debug.patch  linux-3.14.36.config  linux-3.14.36.patch  linux-3.14.57-debug.patch  linux-3.14.57.config  (+77 more)
perf-agent/: perfagentmain.py  poller.py
scripts/: archive_logs.sh  backup_conf.sh  boot_raid1.sh  cluster_start.sh  cluster_stop.sh  conf_sync.sh  crm_mon_email.sh  db_compact.py  dev_nodes.sh  health_chk.sh  hw_raid_cli.py  install_lic.sh  iso_installer.sh  pwatcher.sh  raid_tools.py  read_cert.sh  sbd_list.sh  sbd_unfence.sh  scsi_id.sh  sd_dev_node.sh  startup.sh  support_pkg.sh  usb_sync.sh
trunk/: CHECKSUM.MD5  CHECKSUM.SHA256  ChangeLog  INSTALL  Makefile  Makefile.in  README  THANKS  TODO  configure.ac  install.sh  install.vbs  install_common  rpm2cpio.sh
trunk/etc/: bashrc  crontab  drbd.conf  fstab  inittab  issue  ld.so.conf  lessfs.cfg  mdadm.conf  mdev.conf  modprobe.conf  network  passwd  profile  rc.conf  rc.local  shadow  smartd.conf  sshd_config  ssmtp.conf  sysctl.conf  syslog.conf  ups.conf  upsd.users  upsmon.conf
trunk/etc/ceph/: ceph.conf  rbdmap
trunk/etc/corosync/: corosync.conf
trunk/etc/drbd.d/: global_common.conf
trunk/etc/lvm/: lvm.conf
trunk/etc/rc.d/: common  rc.0  rc.1  rc.2  rc.btier  rc.clvmd  rc.corosync  rc.dlm  rc.dmcache  rc.drbd  rc.eio  rc.fsmount  rc.kdump  rc.local  rc.lvm2  rc.mdraid  rc.mhvtl  rc.network  rc.nrpe  rc.nut  rc.openibd  rc.opensm  rc.pacemaker  rc.perfagent  rc.scst  rc.snmpd  rc.snmptrapd  rc.sshd  rc.stunnel  rc.sysinit
trunk/etc/snmp/: snmpd.conf
trunk/etc/ssmtp/: ssmtp.conf
trunk/etc/stunnel/: stunnel.conf
trunk/misc/: EnhanceIO-master_20140810.patch  Python-2.7.3.patch  busybox-1.19.0.config  busybox-1.19.0.patch  busybox-1.20.2.config  drbd-8.3.13.patch  glibc-2.12.2.patch  grub.cfg  initramfs_init  kernel_headers.patch  linux-2.6.39.4.config  linux-3.10.13.config  linux-3.12.20-debug.patch  linux-3.12.20.config  linux-3.12.7.config  linux-3.14.16.config  linux-3.14.19.patch  linux-3.14.36-debug.patch  linux-3.14.36.config  linux-3.2.6.config  linux-3.7.8.config  linux-3.7.8.patch  linux-3.8.5.config  pycurl-7.19.0.patch  thin-provisioning-tools-0.2.8.patch
trunk/misc/ocf/: scst
trunk/perf-agent/: poller.py
trunk/scripts/: archive_logs.sh  conf_sync.sh  crm_mon_email.sh  db_compact.py  dev_nodes.sh  health_chk.sh  scsi_id.sh  startup.sh
trunk/tui/: Makefile  dialogs.h  info_labels.c  label_data.c  label_data.h  main.c  main.h  megaraid.c  megaraid.h  menu_actions-back_storage.c  menu_actions-back_storage.h  menu_actions-controllers.c  menu_actions-devices.c  menu_actions-devices.h  menu_actions-hosts.c  menu_actions-hosts.h  menu_actions-interface.c  menu_actions-system.c  menu_actions-system.h  menu_actions-targets.c  menu_actions.c  menu_actions.h  prototypes.h  strings.c  strings.h  system.h  utility.c
tui/: Makefile  dialogs.h  info_labels.c  label_data.c  label_data.h  main.c  main.h  megaraid.c  megaraid.h  menu_actions-alua.c  menu_actions-back_storage.c  menu_actions-back_storage.h  menu_actions-controllers.c  menu_actions-controllers.h  menu_actions-devices.c  menu_actions-devices.h  menu_actions-hosts.c  menu_actions-interface.c  menu_actions-system.c  menu_actions-system.h  menu_actions-targets.c  menu_actions-targets.h  menu_actions.c  menu_actions.h  menu_alua.c  menu_common.c  menu_devices.c  menu_filesys.c  menu_hardraid.c  menu_hosts.c  menu_interface.c  menu_lvm.c  menu_softraid.c  menu_system.c  menu_targets.c  prototypes.h  strings.c  strings.h  system.h  utility.c
wiki/: 01_About_ESOS.wiki  03_Supported_Hardware.wiki  04_ESOS_Support.wiki  05_Legacy_CLI_Examples.wiki  06_ESOS_Development.wiki  07_Articles.wiki  08_Project_Roadmap.wiki  11_Building.wiki  12_Installation.wiki  13_Upgrading.wiki  21_Initial_System_Configuration.wiki  22_Advanced_System_Configuration.wiki  23_Monitoring_ESOS_performance.wiki  23_System_and_Performance_Monitoring.wiki  31_Basic_Back_End_Storage_Setup.wiki  32_Advanced_Back_End_Storage_Setup.wiki  41_Device_Configuration.wiki  About_ESOS.wiki  (+12 more)
(+103 files in other folders)
